refactor: gl -> gpu; use MemoryUtil in more places